--- a/style.css
+++ b/style.css
@@ -1,18 +1,29 @@
-﻿body
-{
+﻿html {
+    
+}
+
+body {
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     text-align: center;
     align-items: center;
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 nav {
     display: flex;
     align-items: center;
-    background-color: blue;
+    background-color: #050a3b;
     color: white;
     padding: 0;
     margin: 0;
+    width: 100%;
+    z-index: 2;
+    position: fixed;
 }
 
 .navigation-items {
@@ -42,20 +53,22 @@ nav {
     font-weight: bold;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 1200px;
-    height: 900px;
-    background-image: url(resources/images/background.jpg);
+.top {
+    background-image: url(resources/images/bg4.jpg);
+    height: 100vh;
+    width: 100%;
+    background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
-    color: white;
-    margin: auto auto;
-    padding: 0;
-    background-position: top center;
     background-size: cover;
+    display: block;
+    color: white;
+    font-size: 24px;
 }
 .header-text h1{
-    padding-top: 300px;
+    padding-top: 150px;
+}
+
+.about {
+    margin: auto;
 }
